--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  id="html" lang="en">
+<html id="html" lang="en">
   <head>
     <link defer rel="stylesheet" href="css/normalize.css" />
     <link defer rel="stylesheet" href="css/main.css" />
@@ -18,7 +18,7 @@
       content="TextureMap: textures, patterns, and shapes for web map accessibility"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://github.com/azavea/texturemap" />
+    <meta property="og:url" content="https://texturemap.org" />
     <meta property="og:image" content="img/texturemap-meta.png" />
 
     <link
@@ -66,7 +66,7 @@
         <nav aria-label="Header navigation" class="header-primary__nav">
           <a
             class="header-primary__link"
-            href="https://github.com/azavea/texturemap#readme"
+            href="https://github.com/azavea/texturemap#how-to-use"
             >Documentation</a
           >
           <a
@@ -97,14 +97,9 @@
               </p>
               <div class="hero__buttons">
                 <a
-                  href="https://github.com/azavea/texturemap#readme"
+                  href="https://github.com/azavea/texturemap#how-to-use"
                   class="hero__button-gettingstarted"
                   >Get started</a
-                >
-                <a
-                  href="https://github.com/azavea/texturemap/releases/latest/download/texturemap.zip"
-                  class="hero__button-download"
-                  >Download</a
                 >
               </div>
             </div>
@@ -119,10 +114,13 @@
               Accessible styles for all geometry types
             </h2>
             <p class="large">
-              TextureMap includes resources for <a href="#">polygon</a>,
-              <a href="#">line</a>, and <a href="#">point</a> data. Every style
-              can be modified to match your color palette and adapt to the
-              specific needs of your map.
+              TextureMap includes resources for
+              <a href="https://github.com/azavea/texturemap#polygons">polygon</a
+              >, <a href="https://github.com/azavea/texturemap#lines">line</a>,
+              and
+              <a href="https://github.com/azavea/texturemap#points">point</a>
+              data. Every style can be modified to match your color palette and
+              adapt to the specific needs of your map.
             </p>
           </div>
           <ul class="types">
@@ -150,7 +148,8 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--300">Polygons</h3>
                 <p>
-                  A variety of subtle pattern fills
+                  Shape up your polygon layers by offering an
+                  accessibility-boosting pattern fill
                 </p>
               </div>
             </li>
@@ -178,7 +177,8 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--300">Lines</h3>
                 <p>
-                  Compound lines with dashes and gaps
+                  Make your lines visually distinct with a mix of dashes and
+                  gaps
                 </p>
               </div>
             </li>
@@ -206,7 +206,8 @@
               <div class="types__left">
                 <h3 class="types__heading heading-size--300">Points</h3>
                 <p>
-                  Simple, recognizable geometric shapes
+                  Replace circle markers with a variety of simple, recognizable
+                  geometric shapes
                 </p>
               </div>
             </li>
@@ -218,9 +219,9 @@
           <div>
             <h3 class="heading-size--400">The bigger picture</h3>
             <p>
-              Digital maps have enabled a revolution in wayfinding, planning,
-              and analysis. But for many people, a map can be a barrier to using
-              a website.
+              Interactive maps and GIS have enabled a revolution in wayfinding,
+              planning, and analysis. But a map can be a barrier to using a
+              website.
             </p>
             <p>
               During the Covid-19 pandemic,
@@ -235,15 +236,16 @@
             <p>
               One rule of thumb is to think of a map as a supplement to more
               accessible forms of information and interaction. Offer data as
-              tables, lists, and text. Design workflows that don’t depend on a
-              map to get to the next step. Ask: if the map disappeared, could a
-              user still complete their task?
+              tables, lists, and text. Design workflows that don’t depend on
+              maps to get to the next step. Ask: if the map disappeared, could a
+              user do their job?
             </p>
             <p>
               TextureMap can make your map work better for colorblind users. But
-              we want to be clear that it isn’t a complete solution. For a truly
-              accessible experience, you will need to provide your users with a
-              great experience that is not centered on a map.
+              we want to be clear that it isn’t a complete accessibility
+              solution. For a truly inclusive experience, you will need to
+              provide your users with a great experience that is not centered on
+              a map.
             </p>
           </div>
           <div class="accessibility__image">
@@ -268,8 +270,8 @@
     <footer class="footer-primary">
       <div class="container footer-primary__container">
         <div class="footer__brand">
-          <a href="https://azavea.com"
-            ><img
+          <a href="https://azavea.com">
+            <img
               class="footer__logo"
               width="131"
               height="32"
@@ -280,7 +282,7 @@
         <nav aria-label="Footer navigation" class="footer-primary__nav">
           <a
             class="footer-primary__link"
-            href="https://github.com/azavea/texturemap#readme"
+            href="https://github.com/azavea/texturemap#how-to-use"
             >Documentation</a
           >
           <a
@@ -295,42 +297,9 @@
           >
         </nav>
       </div>
-      <div class="simulate-button">
-        <button class="header-primary__button" id="toggle-monochromacy">
-          <svg
-            aria-hidden="true"
-            focusable="false"
-            data-prefix="fas"
-            data-icon="eye"
-            class="svg-inline--fa fa-eye fa-w-18"
-            role="img"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 576 512"
-          >
-            <path
-              fill="currentColor"
-              d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
-            ></path>
-          </svg>
-          Simulate monochromacy
-        </button>
-      </div>
     </footer>
     <script>
       let mapLoaded = false;
-      let monochromacySimulation = true;
-      function toggleMonochromacy() {
-        monochromacySimulation = !monochromacySimulation;
-        if (monochromacySimulation) {
-          document
-            .getElementById("html")
-            .classList.add("simulate-monochromacy");
-        } else {
-          document
-            .getElementById("html")
-            .classList.remove("simulate-monochromacy");
-        }
-      }
       function loadMap() {
         if (!mapLoaded && window.innerWidth > 768) {
           document.getElementById("map").innerHTML =
@@ -338,9 +307,6 @@
           mapLoaded = true;
         }
       }
-      document
-        .getElementById("toggle-monochromacy")
-        .addEventListener("click", toggleMonochromacy);
       loadMap();
       window.addEventListener("resize", loadMap);
     </script>
