--- a/website/map/index.html
+++ b/website/map/index.html
@@ -3,11 +3,6 @@
   <head>
     <link href="css/map.css" rel="stylesheet" />
     <link href="css/mapboxgl.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="//api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-compare/v0.4.0/mapbox-gl-compare.css"
-      type="text/css"
-    />
     <meta charset="utf-8" />
     <title>
       TextureMap: textures, patterns, and shapes for web map accessibility
@@ -59,13 +54,47 @@
   <body>
     <aside aria-label="Map demo">
       <div id="map" class="map-container texturemap-on">
-        <div id="before" class="map"></div>
-        <div id="after" class="map"></div>
+        <div id="before" class="map">
+          <div class="map-label">
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              class="icon"
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 352 512"
+              width="18"
+              height="18"
+            >
+              <path
+                fill="currentColor"
+                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
+              ></path></svg
+            >No TextureMap
+          </div>
+        </div>
+        <div id="after" class="map">
+          <div class="map-label">
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              class="icon"
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+              width="18"
+              height="18"
+            >
+              <path
+                fill="currentColor"
+                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
+              ></path></svg
+            >With TextureMap
+          </div>
+        </div>
       </div>
     </aside>
-
     <script src="js/mapboxgl.js"></script>
-    <script src="//api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-compare/v0.4.0/mapbox-gl-compare.js"></script>
     <script src="js/map.js"></script>
   </body>
 </html>
