Use absolute path for meta image

--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,10 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://texturemap.org" />
-    <meta property="og:image" content="img/texturemap-meta.png" />
+    <meta
+      property="og:image"
+      content="https://texturemap.org/img/texturemap-meta.png"
+    />
 
     <link
       rel="apple-touch-icon"
