Update meta image

--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <link defer rel="stylesheet" href="css/main.css" />
     <meta charset="utf-8" />
     <title>
-      TextureMap: textures, patterns, and shapes for web map accessibility
+      TextureMap: Design colorblind-friendly maps
     </title>
     <meta
       name="description"
