--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
 
     <meta
       property="og:title"
-      content="TextureMap: textures, patterns, and shapes for web map accessibility"
+      content="TextureMap: Design colorblind-friendly maps"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://texturemap.org" />
