Add third map and change colors

--- a/website/index.html
+++ b/website/index.html
@@ -104,6 +104,11 @@
                   class="hero__button-gettingstarted"
                   >Get started</a
                 >
+                <a
+                  href="https://github.com/azavea/texturemap/releases/latest/download/texturemap.zip"
+                  class="hero__button-download"
+                  >Download</a
+                >
               </div>
             </div>
           </div>
@@ -290,7 +295,7 @@
             class="footer__logo"
             width="144"
             height="35"
-            src="img/azavea-logo.png"
+            src="img/azavea-logo.svg"
             alt="Azavea"
         /></a>
       </footer>
