--- a/website/map/index.html
+++ b/website/map/index.html
@@ -54,26 +54,17 @@
   <body>
     <aside aria-label="Map demo">
       <div id="map" class="map-container texturemap-on">
-        <div id="before" class="map">
+        <div id="map-default" class="map">
           <div class="map-label">
-            <svg
-              aria-hidden="true"
-              focusable="false"
-              class="icon"
-              role="img"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 352 512"
-              width="18"
-              height="18"
-            >
-              <path
-                fill="currentColor"
-                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
-              ></path></svg
-            >No TextureMap
+            Default map
           </div>
         </div>
-        <div id="after" class="map">
+        <div id="map-simulation" class="map">
+          <div class="map-label">
+            Colorblind simulation
+          </div>
+        </div>
+        <div id="map-texturemap" class="map">
           <div class="map-label">
             <svg
               aria-hidden="true"
