--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <link defer rel="stylesheet" href="css/main.css" />
     <meta charset="utf-8" />
     <title>
-      TextureMap: Design colorblind-friendly maps
+      TextureMap: Design colorblind-friendly maps for improved accessibility
     </title>
     <meta
       name="description"
@@ -15,7 +15,7 @@
 
     <meta
       property="og:title"
-      content="TextureMap: Design colorblind-friendly maps"
+      content="TextureMap: Design colorblind-friendly maps for improved accessibility"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://texturemap.org" />
