--- a/website/map/index.html
+++ b/website/map/index.html
@@ -54,35 +54,7 @@
   <body>
     <aside aria-label="Map demo">
       <div id="map" class="map-container texturemap-on">
-        <div id="map-default" class="map">
-          <div class="map-label">
-            Default map
-          </div>
-        </div>
-        <div id="map-simulation" class="map">
-          <div class="map-label">
-            Colorblind simulation
-          </div>
-        </div>
-        <div id="map-texturemap" class="map">
-          <div class="map-label">
-            <svg
-              aria-hidden="true"
-              focusable="false"
-              class="icon"
-              role="img"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-              width="18"
-              height="18"
-            >
-              <path
-                fill="currentColor"
-                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
-              ></path></svg
-            >With TextureMap
-          </div>
-        </div>
+        <div id="map-texturemap" class="map"></div>
       </div>
     </aside>
     <script src="js/mapboxgl.js"></script>
