Visual design enhancements

--- a/website/index.html
+++ b/website/index.html
@@ -74,9 +74,7 @@
         <div class="container">
           <div class="hero">
             <div class="hero__content">
-              <h2 class="heading-size--500">
-                Design colorblind-friendly maps
-              </h2>
+              <h2 class="heading-size--500">Design colorblind-friendly maps</h2>
               <p class="large">
                 Textures, patterns, and shapes that make web maps work for
                 people with color vision deficiency. Built for Mapbox GL and
@@ -138,7 +136,7 @@
                 </picture>
               </div>
               <div class="types__left">
-                <h3 class="types__heading heading-size--300">Polygons</h3>
+                <h3 class="types__heading heading-size--200">Polygons</h3>
                 <p>
                   Shape up your polygon layers by offering an
                   accessibility-boosting pattern fill
@@ -167,7 +165,7 @@
                 </picture>
               </div>
               <div class="types__left">
-                <h3 class="types__heading heading-size--300">Lines</h3>
+                <h3 class="types__heading heading-size--200">Lines</h3>
                 <p>
                   Make your lines visually distinct with a mix of dashes and
                   gaps
@@ -196,7 +194,7 @@
                 </picture>
               </div>
               <div class="types__left">
-                <h3 class="types__heading heading-size--300">Points</h3>
+                <h3 class="types__heading heading-size--200">Points</h3>
                 <p>
                   Replace circle markers with a variety of simple, recognizable
                   geometric shapes
