--- a/website/map/index.html
+++ b/website/map/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="css/map.css" rel="stylesheet" />
-    <link href="css/mapboxgl.css" rel="stylesheet" />
+    <link href="/map/css/map.css" rel="stylesheet" />
+    <link href="/map/css/mapboxgl.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>
       TextureMap: textures, patterns, and shapes for web map accessibility
@@ -57,7 +57,7 @@
         <div id="map-texturemap" class="map"></div>
       </div>
     </aside>
-    <script src="js/mapboxgl.js"></script>
-    <script src="js/map.js"></script>
+    <script src="/map/js/mapboxgl.js"></script>
+    <script src="/map/js/map.js"></script>
   </body>
 </html>
